--- a/.customink/catalog.yaml
+++ b/.customink/catalog.yaml
@@ -18,7 +18,7 @@ deployment_type: # multiple choice
 
 # tier: tier_1 # Mission-critical service or repository. Failure could result in significant impact to revenue or reputation.
 # tier: tier_2 # Customer-facing service or repository. Failure results in degraded experience for customers, although without significant impact to revenue or reputation.
-# tier: tier_3 # Internal service or repository. Failure could result in productivity being compromised within the company.
+tier: tier_3 # Internal service or repository. Failure could result in productivity being compromised within the company.
 # tier: tier_4 # Other service or repository. Failure doesn't result in immediate or significant impact.
 # tier: tier_na # this repo does not have a tier. typically libraries
 
